src/objects/Aircraft_Calculator__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aircraft Calculators</relationshipLabel>
        <relationshipName>Aircraft_Calculators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft 1</label>
        <referenceTo>Aircraft_Analysis__c</referenceTo>
        <relationshipLabel>Aircraft Calculators</relationshipLabel>
        <relationshipName>Aircraft_Calculators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft 2</label>
        <referenceTo>Aircraft_Analysis__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Aircraft 2)</relationshipLabel>
        <relationshipName>Aircraft_Calculators2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft 3</label>
        <referenceTo>Aircraft_Analysis__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Aircraft 3)</relationshipLabel>
        <relationshipName>Aircraft_Calculators3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charter_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leg_ID_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leg ID/ Name</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Aircraft Calculators</relationshipLabel>
        <relationshipName>Aircraft_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Flight__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Either the original flight in question OR a blank flight to allow the calculations a foundation.</inlineHelpText>
        <label>Original Flight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Period_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period 1</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Program Period 1)</relationshipLabel>
        <relationshipName>Aircraft_Calculators1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Period_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period 2</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Program Period 2)</relationshipLabel>
        <relationshipName>Aircraft_Calculators2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Period_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period 3</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Program Period 3)</relationshipLabel>
        <relationshipName>Aircraft_Calculators3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Aircraft_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft 3</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Select Aircraft 3)</relationshipLabel>
        <relationshipName>Aircraft_Calculators3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Aircraft_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft 1</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Selected Aircraft 1)</relationshipLabel>
        <relationshipName>Aircraft_Calculators1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Aircraft_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft 2</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Selected Aircraft 2)</relationshipLabel>
        <relationshipName>Aircraft_Calculators2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Aircraft_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft 4</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Aircraft Calculators (Selected Aircraft 4)</relationshipLabel>
        <relationshipName>Aircraft_Calculators4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Aircraft Calculators</relationshipLabel>
        <relationshipName>Aircraft_Calculators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Program_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Program Period</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Aircraft Calculators</relationshipLabel>
        <relationshipName>Aircraft_Calculators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Program</label>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipLabel>Aircraft Calculators</relationshipLabel>
        <relationshipName>Aircraft_Calculators</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Aircraft Calculator</label>
    <nameField>
        <displayFormat>AIR-{0000000}</displayFormat>
        <label>Aircraft Calculator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aircraft Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>